# shadowrun_v_1.2.3

./: .isort  Dockerfile  README.md  docker-compose.yml  main.py  mypy.ini  requirements.txt
test/: pyproject.toml
test/sdf/: Makefile  pyproject.toml
