[tool.poetry]
name = "django-graphql-blog"
version = "0.1.0"
description = ""
authors = ["Necraatall <seyuki.yamamoro@gmail.com>"]
readme = "README.md"
packages = [{include = "blog"}]



[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.6.5"
aniso8601 = "^7.0.0"
appdirs = "^1.4.4"
asgiref = "^3.4.1"
click = "^8.0.1"
colorama = "^0.4.4"
fastapi = "^0.66.0"
graphene = "^2.1.8"
graphene-sqlalchemy = "^2.3.0"
graphql-core = "^2.3.2"
graphql-relay = "^2.0.1"
greenlet = "^1.1.0"
h11 = "^0.12.0"
Mako = "^1.1.4"
MarkupSafe = "^2.0.1"
mypy-extensions = "^1.0.0"
pathspec = "^0.9.0"
promise = "^2.3"
psycopg2 = "^2.9.1"
pydantic = "^1.8.2"
python-dateutil = "^2.8.1"
python-dotenv = "^1.0.0"
python-editor = "^1.0.4"
regex = "^2021.7.1"
Rx = "^1.6.1"
singledispatch = "^3.6.2"
six = "^1.16.0"
SQLAlchemy = "^1.4.20"
starlette = "^0.14.2"
toml = "^0.10.2"
typing-extensions = "^3.10.0.0"
uvicorn = "^0.14.0"



[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"
safety = "^2.3.5"
black = "^23.0.0"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
mypy = "^1.2.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
